fix: fix alignment of header
Fixed the alignment of the header in mobile screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,8 +12,12 @@
     }
 
     .logo {
-        margin-left: 0px;
+        margin-left: 10px;
         font-size: 20px;
+    }
+
+    nav{
+        margin-left: 10px;
     }
 
     .navbar > * {
